--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
 attrs>=21.2.0
 deprecated>=1.2.12
-importlib_metadata; python_version < '3.8'
+importlib_metadata; python_version < '3.11'
 matplotlib>=2.0.0
 numpy>=1.21,<1.22
 pandas>=1.0.4,<=1.3.5
 python-dateutil>=2.8.0
-pystan==2.19.1.1
-fbprophet==0.7.1
+cmdstanpy>=1.0.4
+prophet==1.1.0
 neuralprophet==0.3.2
 scikit-learn>=0.24.2
 scipy<1.8.0
 seaborn>=0.11.1
 setuptools-git>=1.2
-statsmodels==0.12.2
-typing-extensions; python_version < '3.8'
+statsmodels==0.13.2
+typing-extensions; python_version < '3.11'
